--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/serve": "^2.13.1",
     "@types/nodemailer": "^6.4.16",
     "isbot": "^4.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
