--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "remix-hook-form": "^5.1.1",
+    "remix-toast": "^1.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
