--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "remix-hook-form": "^5.1.1",
     "remix-toast": "^1.2.2",
     "zod": "^3.23.8"
